--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^1.3.5",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.10",
@@ -20,6 +21,7 @@
     "@unform/mobile": "^2.1.3",
     "axios": "^0.21.1",
     "react": "16.13.1",
+    "react-hook-form": "^6.15.5",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.2.0",
