--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
